# nebula-studio

./: .babelrc  .commitlint.js  .dockerignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .gitignore  .npmrc  .prettierrc  .prettierrc.js  .prettierrc.mjs  .stylelintrc.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOY.md  Dockerfile  NOTICE.md  README-en.md  README-zh.md  README.md  app.ts  dashboard.service  go.work  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.front.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tslint.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  pull_request_template.md
.github/workflows/: auto-cherry-pick.yml  build.yml  clinet-image-release.yml  image.yml  nightly.yml  package.yml  release.yml  studio-image-release.yml  studio-rpm-package.yml  studio-tar-package.yml
app/: App.less  App.tsx  AuthorizedRoute.tsx  PrivateRoute.tsx  app.less  common.less  global.d.ts  index.html  index.tsx  router.ts
app-v2/: App.less  AuthorizedRoute.tsx  app.less  common.less  global.d.ts  index.html  index.tsx
app-v2/config/: rules.ts  service.ts
app-v2/context/: LanguageContext.ts
app-v2/interfaces/: import.ts  schema.ts
app-v2/stores/: console.ts  files.ts  global.ts  import.ts  schema.ts
app-v2/utils/: function.ts  gql.ts  http.ts  import.ts  interface.ts  parseData.ts  stat.ts
app/assets/: App.less  App.tsx  PrivateRoute.tsx  common.less  index.html  index.tsx
app/components/: CSVPreviewLink.tsx  CodeMirror.tsx  Modal.tsx  index.ts
app/config/: constants.ts  explore.ts  index.ts  nebulaQL.ts  rules.ts  rules.tsx  service.ts  sketch.ts
app/context/: LanguageContext.ts  index.ts
app/controller/: files.ts  home.ts  import.ts  testFiles.ts
app/interfaces/: datasource.ts  graph.ts  import.ts  schema.ts  sketch.ts  tools.ts
app/middleware/: proxy.ts
app/service/: Import.ts
app/store/: index.ts
app/stores/: console.ts  datasource.ts  files.ts  global.ts  gpt.ts  graph.ts  graphInstances.ts  import.ts  index.ts  llm.ts  moduleConfiguration.ts  schema.ts  sketchModel.ts  twoGraph.ts  types.d.ts  welcome.ts
app/utils/: constant.ts  doc.json  fetch.ts  file.ts  function.ts  gql.ts  http.ts  import.ts  index.ts  ngql.json  ngql.ts  ngqlsheet.json  parseData.ts  reset.css  tck.json  tck.ts  websocket.ts
config/: config.default.ts  config.js  config.local.ts  env.js  manifest.json  server.js  webpack.base.js  webpack.base.ts  webpack.dev.js  webpack.dev.ts  webpack.dev2.ts  webpack.prod.js  webpack.prod.ts
deployment/docker/: README.md  docker-compose.yml
deployment/helm/: Chart.yaml  README.md  values.yaml
docker/: .env  README-zh.md  README.md  docker-compose.yml
docker/nginx/: nginx.conf
docs/: CHANGELOG-en.md  CHANGELOG-zh.md  README-en.md  README-zh.md  data-init.md  sample-gql.gql  style.md
go-api/: README.md  go.mod  go.sum  main.go
go-api/conf/: app.conf
go-api/controllers/: database.go  db.go  default.go
go-api/routers/: router.go
go-api/service/: nebula.go
go-api/utils/: common.go
nebula-go-api/: Dockerfile  README.md  go.mod  go.sum  main.go
nebula-go-api/conf/: app.conf
nebula-go-api/controllers/: db.go
nebula-go-api/routers/: router.go
nebula-go-api/service/: nebula.go
public/datasets/: basketballplayer.ngql  datalineage.ngql  fifa2022.ngql  fraud_detection.ngql  id_mapping.ngql  openstack.ngql  shareholding.ngql  sns.ngql  supplychain.ngql
public/icons/: iconpark.tpl
sample-data/: docker-compose.yml
sample-data/ngql/: init-data.ngql  init-schema.ngql
scripts/: build.sh  docker-compose.yml  getDoc.js  pack.sh  pack_CentOS.sh  pack_CentOS_aarch64.sh  pack_Ubuntu.sh  pack_Ubuntu_aarch64.sh  package.sh  pid.sh  postinst.sh  postrm.sh  preinst.sh  prerm.sh  rpm-package.sh  rpm-upload.sh  setEventTracking.sh  start.sh  stop.sh  tar-package.sh  tar-upload.sh  upload.sh
scripts/deb/: CMakeLists.txt  nebula-graph-studio.service  postinst  prerm  start.sh  stop.sh  stop_with_system.sh
scripts/ngql/: init-data.ngql  init-schema.ngql  relationship-data.ngql  relationship-schema.ngql
scripts/rpm/: CMakeLists.txt  nebula-graph-studio.service  postinst.sh  postrm.sh  preinst.sh  prerm.sh  start.sh  start_with_system.sh  stop.sh
server/: .golangci.yml  Makefile  README.md  go.mod  go.sum  main.go
server-v2/: .golangci.yml  Makefile  go.mod  go.sum
server-v5/: Makefile  go.mod  go.sum
server/config/: example-config.yaml
src/: app.tsx  global.d.ts  index.tsx
src/interfaces/: console.ts  index.ts
src/services/: index.ts
src/stores/: _ref.ts  (+4 more)
utils/: lint-types.ts
vendors/: gateway.conf
(+1128 files in other folders)
